adds minor configuration

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "jacksonbates <malgalin@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "serve": "webpack-dev-server"
+  },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
